--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.5",
+    "@angular/cdk": "^17.3.5",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -18,6 +19,18 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/lucide": "^26.3.0",
+    "@spartan-ng/ui-core": "0.0.1-alpha.343",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.344",
+    "@spartan-ng/ui-label-brain": "0.0.1-alpha.344",
+    "@spartan-ng/ui-table-brain": "0.0.1-alpha.344",
+    "@swimlane/ngx-charts": "^20.5.0",
+    "angular-highcharts": "^17.0.1",
+    "chart.js": "^4.4.2",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -26,13 +39,19 @@
     "@angular-devkit/build-angular": "^17.3.5",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
+    "@spartan-ng/cli": "^0.0.1-alpha.346",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.38",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.4.2"
   }
 }
